<resources>
    <string name="app_name">MediZone</string>
    <string-array name="Cities">
        <item>Select City</item>
        <item>Agartala</item>
        <item>Agra</item>
        <item>Agumbe</item>
        <item>Ahmedabad</item>
        <item>Aizawl</item>
        <item>Ajmer</item>
        <item>Alappuzha Beach</item>
        <item>Allahabad</item>
        <item>Alleppey</item>
        <item>Almora</item>
        <item>Amarnath</item>
        <item>Amritsar</item>
        <item>Anantagir</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Araku valley</item>
        <item>Aurangabad</item>
        <item>Ayodhya</item>
        <item>Badrinath</item>
        <item>Bangalore</item>
        <item>Baroda</item>
        <item>Bastar</item>
        <item>Bhagalpur</item>
        <item>Bhilai</item>
        <item>Bhimtal</item>
        <item>Bhopal</item>
        <item>Bhubaneswar</item>
        <item>Bhuj</item>
        <item>Bidar</item>
        <item>Bilaspur</item>
        <item>Bodh Gaya</item>
        <item>Calicut</item>
        <item>Chail</item>
        <item>Chamba</item>
        <item>Chandigarh</item>
        <item>Chennai</item>
        <item>Chennai Beaches</item>
        <item>Cherai</item>
        <item>Cherrapunji</item>
        <item>Chidambaram</item>
        <item>Chikhaldara Hills</item>
        <item>Chopta</item>
        <item>Coimbatore</item>
        <item>Coonoor</item>
        <item>Coorg</item>
        <item>Corbett National Park</item>
        <item>Cotigao Wild Life Sanctuary</item>
        <item>Cuttack</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Dalhousie</item>
        <item>Daman and Diu</item>
        <item>Darjeeling</item>
        <item>Dehradun</item>
        <item>Delhi</item>
        <item>Devikulam</item>
        <item>Dhanaulti</item>
        <item>Dharamashala</item>
        <item>Dindigul</item>
        <item>Dudhwa National Park</item>
        <item>Dwaraka</item>
        <item>Faridabad</item>
        <item>Gandhinagar</item>
        <item>Gangotri</item>
        <item>Gangtok</item>
        <item>Gir Wildlife Sanctuary</item>
        <item>Goa</item>
        <item>Great Himalayan National Park</item>
        <item>Gulmarg</item>
        <item>Gurgaon</item>
        <item>Guruvayoor</item>
        <item>Guwahati</item>
        <item>Gwalior</item>
        <item>Hampi</item>
        <item>Haridwar</item>
        <item>Hogenakkal</item>
        <item>Horsley Hills</item>
        <item>Hyderabad</item>
        <item>Idukki</item>
        <item>Imphal</item>
        <item>Indore</item>
        <item>Itangar</item>
        <item>Jabalpur</item>
        <item>Jaipur</item>
        <item>Jaisalmer</item>
        <item>Jalandhar</item>
        <item>Jammu</item>
        <item>Jamshedpur</item>
        <item>Jodhpur</item>
        <item>Kanchipuram</item>
        <item>Kanha National Park</item>
        <item>Kanpur</item>
        <item>Kanyakumari</item>
        <item>Kargil</item>
        <item>Karwar</item>
        <item>Kausani</item>
        <item>Kedarnath</item>
        <item>Keoladeoghana National Park</item>
        <item>Khajuraho</item>
        <item>Kochi</item>
        <item>Kodaikanal</item>
        <item>Kolkata</item>
        <item>Kollam</item>
        <item>Konark</item>
        <item>Kotagiri</item>
        <item>Kottakkal and Ayurveda</item>
        <item>Kovalam</item>
        <item>Kovalam and Ayurveda</item>
        <item>Kudremukh</item>
        <item>Kullu</item>
        <item>Kumaon</item>
        <item>Kumarakom</item>
        <item>Kumarakom and Ayurveda</item>
        <item>Kumarakom Bird Sanctuary</item>
        <item>Kurukshetra</item>
        <item>Lakshadweep</item>
        <item>Lucknow</item>
        <item>Ludhiana</item>
        <item>Madurai</item>
        <item>Mahabalipuram</item>
        <item>Malpe Beach</item>
        <item>Manas National Park</item>
        <item>Mangalore</item>
        <item>Maravanthe Beach</item>
        <item>Margoa</item>
        <item>Mount Abu</item>
        <item>Mumbai</item>
        <item>Munnar</item>
        <item>Mussoorie</item>
        <item>Mysore</item>
        <item>Nahsik</item>
        <item>Nalanda</item>
        <item>Nanda Devi National Park</item>
        <item>Nandi Hills</item>
        <item>Netravali Wild Life Sanctuary</item>
        <item>Ooty</item>
        <item>Orchha</item>
        <item>Pahalgam</item>
        <item>Palakkad</item>
        <item>Panchgani</item>
        <item>Patna</item>
        <item>Patnitop</item>
        <item>Pattadakkal</item>
        <item>Periyar Wildlife Sanctuary</item>
        <item>Pithoragarh</item>
        <item>Pondicherry</item>
        <item>Pune</item>
        <item>Puri</item>
        <item>Pushkar</item>
        <item>Raipur</item>
        <item>Rajaji National Park</item>
        <item>Rajgir</item>
        <item>Rameshwaram</item>
        <item>Ranchi</item>
        <item>Ranganthittu Bird Sanctuary</item>
        <item>Ranikhet</item>
        <item>Ranthambore</item>
        <item>Rishikesh</item>
        <item>Rourkela</item>
        <item>Sanchi</item>
        <item>Saputara</item>
        <item>Sariska Wildlife Sanctuary</item>
        <item>Shillong</item>
        <item>Shimla</item>
        <item>Sohna_Hills</item>
        <item>Srinagar</item>
        <item>Sunderbans</item>
        <item>Surat</item>
        <item>Tezpur</item>
        <item>Thanjavur</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Tirunelveli</item>
        <item>Tirupati</item>
        <item>Trichy</item>
        <item>Udaipur</item>
        <item>Ujjain</item>
        <item>Vaishali</item>
        <item>Valley of Flowers</item>
        <item>Varanasi</item>
        <item>Varkala and Ayurveda</item>
        <item>Vijayawada</item>
        <item>Vishakhapatnam</item>
        <item>Vrindhavan</item>
        <item>Warangal</item>
        <item>Wayanad</item>
        <item>Wayanad Wildlife Sanctuary</item>
        <item>Yercaud</item>
        <item>Zanskar</item>
    </string-array>
    <string-array name="Categories">
        <item>Select category</item>
        <item>Cardiologist</item>
        <item>Audiologist</item>
        <item>Dentist</item>
        <item>ENT</item>
        <item>Gynaecologist</item>
        <item>Orthopaedic surgeon</item>
        <item>Paediatrician</item>
        <item>Psychiatrists</item>
        <item>Veterinarian</item>
        <item>Radiologist</item>
        <item>Pulmonologist</item>
        <item>Endocrinology</item>
        <item>Oncologist</item>
        <item>Neurologist</item>
        <item>Others</item>

    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="welcome_to_go_service">Welcome to Go Service</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create new Account</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="_91">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="customer">Customer</string>
    <string name="service_provider">Service Provider</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_category">Select Category</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="enter_registered_mobile_number">Enter Registered Mobile Number</string>
    <string name="use_email_id">Use Email ID</string>
    <string name="or">Or</string>
    <string name="proceed_to_login">Proceed to login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Create Account</string>
    <string name="enter_registered_email_address">Enter registered Email Address</string>
    <string name="use_mobile_number">Use Mobile Number</string>
    <string name="registered_email_id">Registered Email ID</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="add_your_address">Add your address</string>
    <string name="move_pin_to_address">Move the map to your location, drop the pin at your address</string>
    <string name="add_your_complete_address">Add your complete address</string>
    <string name="type_of_address">Type of address</string>
    <string name="enter_a_nickname_e_g_bae_s_home">Enter a nickname (e.g. bae\'s home)</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="demo_name">Golap Barman</string>
    <string name="ac_repairing">AC Repairing</string>
    <string name="type_a_message">Type a message</string>
    <string name="call_us">Call us</string>
    <string name="contact_us">Contact Us</string>
    <string name="_91_9999988888">+91– 9999988888</string>
    <string name="response_time_within_5_minutes">Response time : Within 5 minutes</string>
    <string name="email_us">Email us</string>
    <string name="get_direction">Get Direction</string>
    <string name="complete_your_profile"><u>Complete your profile</u></string>
    <string name="qualifications">Qualifications</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="upload_your_profile_photo">1. Upload your profile photo</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_your_identity_proof">2. Upload your identity proof</string>
    <string name="choose_your_image">Choose image will show here</string>
    <string name="add_review">Add review</string>
    <string name="directions">Directions</string>
    <string name="message">Message</string>
    <string name="request_service">Request Service</string>
    <string name="pay">Make Payment</string>
    <string name="ratings_amp_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="haven_t_received_otp_yet">Haven\'t received OTP yet?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="create_account">Create Account</string>
    <string name="enter_one_time_password_otp">Enter One Time Password (OTP)</string>
    <string name="what_services_do_you_need">Choose the service you require</string>
    <string name="active_request_nclick_to_see_all_requests">Active Request</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="complete_request">Complete Requests</string>
    <string name="change_location">Change Location</string>
    <string name="click_to_change_the_location">Click to change the location</string>
    <string name="requests_sent">Requests Sent</string>
    <string name="click_to_see_sent_requests">Click to see sent requests</string>
    <string name="services_history">Services History</string>
    <string name="click_to_see_purchased_services">Click to see purchased services</string>
    <string name="change_password">Change Password</string>
    <string name="click_to_set_new_password">Click to set new password</string>
    <string name="click_here_to_get_details">Click here to get details</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="choose_what_you_are">You are a</string>
</resources>