<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue1"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/enter_one_time_password_otp"
        android:textColor="@color/white"
        android:letterSpacing="0.03"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/editOTP"
            android:layout_width="260dp"
            android:layout_height="56dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:letterSpacing="0.5"
            android:maxLength="6"
            android:hint="000000"
            android:fontFamily="@font/poppins_regular"
            android:textSize="22sp"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:background="@drawable/otp_back"
            android:padding="10dp"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haven_t_received_otp_yet"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:letterSpacing="0.02"/>

        <TextView
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:clickable="true"
            android:text="@string/resend_otp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:letterSpacing="0.03"
            android:focusable="true" />

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_login"
        android:stateListAnimator="@null"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        android:indeterminateTint="@color/black"/>

</LinearLayout>
